Align picture in error pages. Fix add to cart notifications not working. Fix cart total not being mobile friendly.

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -540,6 +540,10 @@ legend {
     max-width: 100%;
     max-height: 45vh;
 }
+#error-page div.hide-for-medium {
+    margin-left: 5%;
+    margin-right: 5%;
+}
 
 /* Rate the shopping experience */
 .rating-star {
